--- a/index.html
+++ b/index.html
@@ -1,1 +1,7 @@
-Hello world
+<input type="button" value="Say hello" onClick="showAndroidToast('Hello Android!')" />
+
+<script type="text/javascript">
+    function showAndroidToast(toast) {
+        Android.showToast(toast);
+    }
+</script>
